<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DigestER</string>
    <string name="select_forum_section">Select a forum section</string>

    <string name="settings">Settings</string>
    <string name="settings_digest_preview_summary">Experimental feature</string>
    <string name="settings_updates">Updates</string>
    <string name="settings_updates_observer">Check for updates</string>
    <string name="about">About</string>
    <string name="repository">Repository</string>
    <string name="four_pda" translatable="false">4PDA</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="about_message">Created by Keddnyo</string>

    <string name="android" translatable="false">Android</string>
    <string name="wearable_devices">Wearable devices</string>
    <string name="book_store">Book store</string>

    <string name="apps">Apps</string>
    <string name="games">Games</string>
    <string name="book_depository">Book depository</string>

    <string name="forum_section_icon">A forum section icon</string>
    <string name="forum_section_open_link">Open 4PDA forum section</string>

    <string name="update_is_available">Update %1$s is available</string>
    <string name="update_download">Download</string>
    <string name="update_is_downloading">Update is downloading…</string>

    <string name="close_dialog">Close dialog</string>
    <string name="date_range_hint" translatable="false">dd.MM.yyyy</string>
    <string name="date_incorrect">Incorrect date</string>
    <string name="submit">Submit</string>

    <string name="error_has_occurred">Error has occurred</string>

    <string name="response_digest_title">Digest</string>
    <string name="response_code_preview">Code preview</string>
    <string name="response_formatted_preview">Formatted preview</string>
    <string name="response_digest_copy">Copy</string>
    <string name="response_digest_preview">Preview</string>
    <string name="response_digest_public">Publish</string>
    <string name="response_copied_to_clipboard">The digest has been copied to clipboard</string>
</resources>